header and footer updated

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>Joseph Flanagan</title>
-        <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     </head>
 
     <body>
         <header>
             
-            <h1>Joesph Flanagan</h1>
+            <h1>Joseph Flanagan</h1>
             
             <nav><!--LINKS-->
                 <ul>
