--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </p>
                 <br/>
                 <p>
-                     I am currently attending a University of Texas Coding Bootcamp, to be concluded in December 2020. Since starting this course I've become familiar with HTML, CSS, and git.
+                     I am currently attending a University of Texas Coding Bootcamp, to be concluded in December 2020. Since starting this course I've become familiar with HTML, CSS, Git, JavaScript, JQuery, Bootstrap, AJAX, Node.js, OOP, TDD, and Express.js.
                 </p>
             </div>
         </section>
@@ -78,27 +78,35 @@
                             Run Buddy
                         </div>
 
+                        <div class="work-grid-item password-generator" onclick=location.href="https://josephptflanagan.github.io/200607-Password-Generator/">
+                            Password Generator
+                        </div>
+
+                        <div class="work-grid-item taskinator" onclick=location.href="https://josephptflanagan.github.io/Taskinator/">
+                            Taskinator
+                        </div>
+
+                        <div class="work-grid-item git-it-done" onclick=location.href="https://josephptflanagan.github.io/git-it-done/"> 
+                            Git it Done
+                        </div>
+
+                        <div class="work-grid-item work-day-scheduler" onclick=location.href="https://josephptflanagan.github.io/200621-Work-Day-Scheduler/">
+                            Work Day Scheduler
+                        </div>
+
+                        <div class="work-grid-item weather-dashboard" onclick=location.href="https://josephptflanagan.github.io/200628-Weather-Dashboard/">
+                            Weather Dashboard
+                        </div>
+
+                        <div class="work-grid-item zoo-keepr" onclick=location.href="https://vast-depths-58840.herokuapp.com/">
+                            Zoo Keepr
+                        </div>
+
+                        <div class="work-grid-item note-taker" onclick=location.href="https://radiant-stream-14965.herokuapp.com/">
+                            Note Taker
+                        </div>
+
                         <div class="work-grid-item fake01">
-                            Potential Website
-                        </div>
-
-                        <div class="work-grid-item fake02">
-                            Potential Website
-                        </div>
-
-                        <div class="work-grid-item fake03">
-                            Potential Website
-                        </div>
-
-                        <div class="work-grid-item fake04">
-                            Potential Website
-                        </div>
-
-                        <div class="work-grid-item fake05">
-                            Potential Website
-                        </div>
-
-                        <div class="work-grid-item fake06">
                             Potential Website
                         </div>
 
@@ -139,7 +147,7 @@
         </section>
 
         <footer>
-            <h2>❤️ Made with love by Joseph Flanagan.</h2>
+            
             <div>
                 &copy;2020 Joseph Flanagan. (not a real copyright)
             </div>
